2011-11-16  Richard Earnshaw  <rearnsha@arm.com> 	    Bernd Schmidt <bernds@coudesourcery.com> 	    Sebastian Huber <sebastian.huber@embedded-brains.de>

PR target/49641
	* config/arm/arm.c (store_multiple_sequence): Avoid cases where
	the base reg is stored iff compiling for Thumb1.

	* gcc.target/arm/pr49641.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181416 138bc75d-0d04-0410-961f-82ee72b054a4